# mat-dp-pipeline

./: README.md  pyproject.toml
examples/: notebook.ipynb  test_modified_pipeline.py  test_world.py  world_example.py
examples/World/Europe/: techs2015.csv
mat_dp_pipeline/: __init__.py  abstract.py  abstract_data_sources.py  application.py  calculation.py  common.py  data_source.py  pipeline.py  plotting.py  sdf_to_input.py  standard_data_format.py
mat_dp_pipeline/data_sources/: __init__.py  generic.py  mat_dp_db.py  stored.py  tmba.py  utils.py
mat_dp_pipeline/pipeline/: __init__.py  calculation.py  common.py  flatten_hierarchy.py  pipeline.py  sdf_to_input.py  sparse_to_processable_input.py
mat_dp_pipeline/presentation/: __init__.py  application.py  plotting.py
mat_dp_pipeline/sdf/: __init__.py  create_sdf.py
test_data/CalculationTest/: indicators.csv  techs.csv
test_data/HierarchyTest/: expected.processable_input.md  indicators.csv
test_data/HierarchyTest/Europe/: indicators.csv  techs.csv
test_data/Invalid_YearlyFileWithNewTech/: indicators.csv  targets.csv
test_data/ScalingTest/: expected.processable_input.md  indicators.csv  techs2020.csv
test_data/World/: expected.processable_input.md  indicators.csv  techs.csv
test_data/World/Europe/: techs.csv  techs2017.csv
tests/: conftest.py  test_calculation.py  test_sdf_conversion.py  test_sdf_to_processable_input.py
tests/data/: indicators.csv  intensities.csv  targets.csv
tests/data/CalculationTest/: indicators.csv  targets.csv
tests/data/HierachyTest/: techs.csv
tests/data/HierarchyTest/: expected.processable_input.md
tests/data/Invalid_YearlyFileHasNewTech/: indicators.csv  techs.csv
tests/data/Invalid_YearlyFileWithNewTech/: techs2020.csv
tests/data/ScalingTest/: indicators.csv  targets.csv  techs.csv
tests/data/World/: expected.processable_input.md
(+9 files in other folders)
